--- a/src/components/App.css
+++ b/src/components/App.css
@@ -274,10 +274,10 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .infoPanel.version { 
    z-index: 100000;
-   position: fixed;
+   position: absolute;
    width:100%;
    height:60px;
-   top:80px;
+   top:130px;
    display: flex;
    align-items: center;
    justify-content: center;
