--- a/src/components/App.css
+++ b/src/components/App.css
@@ -273,11 +273,12 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #root > div > .infoPanel + .resource { padding-top:85px; }
 
 .infoPanel.version { 
-   z-index: 100000;
+   z-index: 1000001;
    position: absolute;
-   width:100%;
-   height:60px;
-   top:130px;
+   width:12%;
+   left:44%;
+   height:50px;
+   top:0px;
    display: flex;
    align-items: center;
    justify-content: center;
