--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -510,6 +510,10 @@ header[data-hits="0"] ~ .hits .pagination,
   display: block;
 }
 
+.AppSK .result .data .names.notes br + br {
+  display:none;
+}
+
 .AppSK .result .data .names .toggle {
   cursor:pointer;
   color:#d73449;
