--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -827,6 +827,8 @@ header[data-hits="0"] ~ .hits .pagination,
   font-weight:400;
 }
 
+#tradi-recent .AppSK { width:100%; }
+
 .hits > .pagination:first-child {
   display:none;
 }
