WIP: fixes for autocomplete (#938)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -946,7 +946,7 @@ ul.suggestions li > span > svg:first-child {
 }
 
 ul.suggestions .fromHisto svg ~ span {
-   color:#52188c;
+   color:#52188c !important;
 }
 
 ul.suggestions li {
