--- a/src/components/App.css
+++ b/src/components/App.css
@@ -473,7 +473,7 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 /* .active-filter > span > b { margin-left:10px;} */
 
 
-#filters-UI { padding-bottom:15px; text-align:left; background-color: #fce08e; margin-top:-5px; height:auto; position:sticky;top:80px;z-index:1000;}
+#filters-UI { padding-bottom:15px; text-align:left; background-color: #fce08e; margin-top:-5px; height:auto; /*position:sticky;*/top:80px;z-index:1000;}
 #filters-UI > div {  width:700px; min-height:30px; overflow:hidden; /*white-space: nowrap; position:absolute; */ max-height:135px; height:auto;
    padding-bottom:0px; padding-top:25px;
 }
@@ -545,7 +545,9 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 
 #menu-datatype > div:last-child ul li { justify-content: flex-end; }
 
-#suggestions li { padding:0; }
+#suggestions:not(.advanced) li { padding:0; background-color: white;}
+
+#suggestions.advanced li { background-color: white;}
 
 #menu-datatype > div:last-child ul li,
 #suggestions li > span { padding:12px 16px; font-size:14px; color: #4c4c4c; font-weight:600; }
@@ -730,6 +732,7 @@ body > #pop-login { z-index:1000000 ;}
    max-width:100%;
 }
 
+.inner-search-bar #simple-search,
 #search-bar #simple-search {
    position: absolute;
    right: 0;
@@ -740,7 +743,7 @@ body > #pop-login { z-index:1000000 ;}
    height: 44px;
    cursor: pointer;
    font-weight:700;
-   z-index:10000;
+   z-index:10;
    color:#343434;
 }
 
@@ -759,7 +762,7 @@ body > #pop-login { z-index:1000000 ;}
    margin:auto;
    display: flex;
    align-items: baseline;
-   padding-left:70px;
+   padding:0 70px; 
    box-sizing: border-box;
 }
 
