--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1088,3 +1088,27 @@ header[data-hits="0"] ~ .hits .pagination,
   font-weight:700;
 }
 
+.nav ~ .AppSK.advanced #data-checkbox,
+.nav ~ .AppSK.advanced #res-header,
+.nav ~ .AppSK.advanced #res-container,
+.nav ~ .AppSK.advanced footer,
+.nav ~ .AppSK.advanced .fond-logo,
+.nav ~ .AppSK.advanced .inner-search-bar:not(#a),
+.nav ~ .AppSK.advanced .over-nav,
+.nav ~ .AppSK.advanced .nav {
+  display:none
+}
+
+.nav ~ .AppSK.advanced #search-bar {
+  padding-bottom:30px;
+}
+
+.nav ~ .AppSK.advanced .App {
+  position: relative;
+  z-index:100000;
+}
+
+.nav ~ .AppSK.advanced .App,
+.nav ~ .AppSK.advanced .App .SearchPane:not(#a) {
+  min-height: 0;
+}
