--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -143,12 +143,14 @@
 
 .AppSK .ais-RefinementList[data-id='nocomm_search']+[data-id='etext_search'],
 .AppSK .ais-RefinementList[data-id='etext_access']+[data-id='etext_quality'],
+.AppSK .ais-RefinementList[data-id='etext_access']+[data-id='etext_access'],
 .AppSK .ais-RefinementList[data-id='etext_quality']+[data-id='etext_access'] {
   margin-top:0;
 }
 
 .AppSK .ais-RefinementList[data-id='nocomm_search']+[data-id='etext_search'] .filter-title,
 .AppSK .ais-RefinementList[data-id='etext_access']+[data-id='etext_quality'] .filter-title,
+.AppSK .ais-RefinementList[data-id='etext_access']+[data-id='etext_access'] .filter-title,
 .AppSK .ais-RefinementList[data-id='etext_quality']+[data-id='etext_access'] .filter-title {
   display: none;
 }
@@ -158,6 +160,7 @@
 .AppSK .ais-RefinementList:not([data-id='etext_quality'])+[data-id='etext_access'] [data-id='2'],
 .AppSK .ais-RefinementList:not([data-id='etext_quality'])+[data-id='etext_access'] [data-id='1'], 
 .AppSK .ais-RefinementList[data-id='etext_quality']+[data-id='etext_access'] [data-id='3'],
+.AppSK .ais-RefinementList[data-id='etext_access']+[data-id='etext_access'] [data-id='3'],
 .AppSK .ais-RefinementList[data-id='etext_quality']+[data-id='etext_access'] [data-id='1'] {
   display:none;
 }
