--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -170,6 +170,7 @@
   opacity:0.55;
   width:17px;
   margin-top:3px;
+  margin-left:3px;
 }
 
 
@@ -609,6 +610,19 @@ header[data-hits="0"] ~ .hits .pagination,
   color:#d73449;
   font-weight: 500;
   /* margin-left:5px; */
+}
+
+
+.AppSK:not(#a) .result .thumb .quality:not(#a) {
+  display: inline;
+}
+
+.AppSK .result .thumb .quality svg {
+  width:17px;
+  opacity:0.55;
+  margin-top: -5px;
+  margin-left: 3px;
+  vertical-align: -9px;
 }
 
 .AppSK:not(#a) .result .thumb a .RID {
