--- a/src/components/App.css
+++ b/src/components/App.css
@@ -857,7 +857,12 @@ body > #pop-login { z-index:1000000 ;}
    /* padding-left:48px;
    padding-right:48px; */
    line-height: 40px;
-   padding: 8px 48px;
+   padding: 8px 48px 8px 16px;
+}
+
+
+.resource [data-prop='tmp:outlineSearch'] .search input {
+   padding-left:0;
 }
 
 .inner-search-bar:not(#a) > div > span:last-child input::placeholder {
@@ -3467,11 +3472,31 @@ div:has(.resource.preview) .infoPanel.inRes { margin:0 !important; }
 .resource .data#outline > .search input ~ span { display: inline-block; position:absolute; height:40px;width:40px; cursor:pointer; border-radius:50%; }
 .resource [data-prop="tmp:outlineSearch"] div input + span,
 .resource .data#outline > .search input + span { background-image:url(/icons/loupe.png); background-position:center; background-repeat:no-repeat; 
-   left:4px; top:8px; z-index:1000;  opacity:0.65;
+   right:4px; top:8px; z-index:1000;  opacity:0.65;
+}
+
+.resource [data-prop="tmp:outlineSearch"] div input + span:hover::before,
+.resource .data#outline > .search input + span:hover::before{
+   background-color:#ccc5;
+   mix-blend-mode: darken;
+   content:'';
+   width:100%;
+   height:100%;
+   position: absolute;
+   border-radius: 50%;
 }
 
 .resource [data-prop="tmp:outlineSearch"] div input + span + span,
-.resource .data#outline > .search input + span + span { right:0px; display:inline-flex; align-items: center;justify-content: center; width:30px; top:10px; z-index:1000;}
+.resource .data#outline > .search input + span + span { right:42px; display:inline-flex; align-items: center;justify-content: center; width:40px; height:40px;top:8px; z-index:1000;
+   box-sizing: border-box;
+}
+
+
+.resource [data-prop="tmp:outlineSearch"] div input + span + span:hover,
+.resource .data#outline > .search input + span + span:hover {
+   background-color:#ccc5;
+   border-radius: 22px 22px;
+}
 
 .resource .data#outline > .search input.disabled { pointer-events: none; background:#f9f9f9; }
 .resource .data#outline > .search input.disabled ~ span { pointer-events: none; opacity:0.4; }
