--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1373,3 +1373,11 @@ header[data-hits="0"] ~ .hits .pagination,
   display: none !important;
 }
 
+
+.resource h4.possibleEtext {
+  cursor:pointer;
+}
+
+.resource h4.possibleEtext a[disabled] {
+  opacity:0.5;
+}
