--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4781,7 +4781,7 @@ h4:not(.first)
 {     
    content:' ' !important;position:absolute;background-color:rgba(220,220,220,0.5); z-index:-1;
    width:100%; height:100%;top:-4px;left:-10px;  padding:4px 10px;
-   opacity:0  ;
+   opacity:0  ; pointer-events: none;
 }
 
 
