--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1383,7 +1383,7 @@ header[data-hits="0"] ~ .hits .pagination,
 }
 
 
-.resource h4.possibleEtext {
+.resource h4.possibleEtext a {
   cursor:pointer;
 }
 
