--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4429,7 +4429,7 @@ html[lang='bo'] .resource .title h2 .T .space-fix span:not(.RID) { line-height: 
 
 #popSame { margin-top:-10px; z-index:1000000; }
 .poPdf,
-#popDL { margin-top:30px; }
+#popDL { margin-top:30px; z-index:10000;}
 
 body > [id^="menu-"] { z-index:10010; }
 body > [id^="menu-cita"] { z-index:1001000; }
