--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5175,7 +5175,7 @@ span.in { font-weight:500;padding-left:0px; padding-right:10px; margin-left:36px
 
 h4 .svg { background-color:white; padding-right:15px;  display:inline-block;}
 h4 svg {  display:inline-block; width:24px; opacity:1; vertical-align: -5px;}
-h4:hover svg path { color:#d73449; stroke:#d73449; }
+h4:hover svg:not(.help-workid) path { color:#d73449; stroke:#d73449; }
 h4:hover svg.image path { fill:transparent;}
 h4:hover svg.image polygon {fill:#d73449; }
 h4:hover svg.etext path { fill: #d73449; }
